<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_activity_bw2x"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/botoHistoria"
        android:layout_width="257dp"
        android:layout_height="48dp"
        android:layout_marginTop="170dp"
        android:background="@color/teal_700"
        android:text="@string/bHistoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botoQA"
        android:layout_width="257dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@color/teal_700"
        android:text="@string/bQA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botoHistoria" />

    <Button
        android:id="@+id/botoOpts"
        android:layout_width="257dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@color/teal_700"
        android:text="@string/bOpts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botoQA" />

</androidx.constraintlayout.widget.ConstraintLayout>